tdf#123026 xlsx import: recalc optimal row height on import

This patch depends on the previous patch for this bug report,
which allows each sheet to hold its own default row height.

The given height for the row might not be enough to fit
the content. If the row is set to use optimal height,
that will be corrected as soon as the row is edited.

Obviously, it should not require an edit to be correct
on FILEOPEN, so this patch recalculates after loading the document.

This might have a very negative effect on the time needed
to open a file. I couldn't duplicate the XLS method
because Library_scfilt.mk doesn't link to ScSizeDeviceProvider.
The existing UpdateAllRowHeights wasn't designed to
allow any performance improvements, so I made a new one.
The new one is based on the newer ScDocRowHeightUpdater
class - so perhaps the older method can be phased out.
This new UpdateAllRowHeights could replace the
XLS bSetRowHeights clause - with hopefully some performance
benefit.

I'm not sure I'm ready for the regression hate
that would come from the inevitable performance implications.

Testing however doesn't suggest a huge slowdown. I tested with
time make sc.check
before the fix I was getting 16m 4s +- 10s
after the fix I was getting 16m 25s +- 10s

Specific test showing the need for these patches:
make CppunitTest_sc_subsequent_filters_test2 \
    CPPUNIT_TEST_NAME=testTdf123026_optimalRowHeight

Impacted unit tests (without the previous patch)
are documented in earlier patchsets.

make CppunitTest_sc_subsequent_export_test \
    CPPUNIT_TEST_NAME=testMiscRowHeightExport

make CppunitTest_sc_subsequent_export_test2

make CppunitTest_sc_jumbosheets_test CPPUNIT_TEST_NAME=testTdf134553

Change-Id: I6d020c1a5137dd4f05e20e82b1764a102b7f56d0
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140260
Reviewed-by: Justin Luth <jluth@mail.com>
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>